--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIUQATrNl5GqOq-CB2oQoquSPrXC0tElA&callback=myMap" async defer></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
+<script src="js/cards.js" type="text/javascript"></script>
 <script src="js/index.js" type="text/javascript"></script>
 </html>
