--- a/databaseForms.html
+++ b/databaseForms.html
@@ -34,5 +34,6 @@
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCndUePDugeHEt2kQ2vA4ptMYJpiUeGqXE&libraries=places"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
+<script src="js/themoviedb.js" type="text/javascript"></script>
 <script src="js/forms.js" type="text/javascript"></script>
 </html>
