--- a/home.html
+++ b/home.html
@@ -30,77 +30,58 @@
       </ul>
     </div>
   </nav>
-  <div id="div_main_grid" class="grid">
-    <div id="div_main_carousel" class="row">
-      <!--<a href="" download>
-      <img src="/images/downloadbutton.jpg"></a>-->
-      <div class="carousel carousel-slider center" data-indicators="true">
-        <!--<div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2">button</a>
-      </div>-->
-      <div class="carousel-item teal darken-3 white-text" href="#one!">
-        <h2>Home section</h2>
-        <p class="white-text">This is the Home Section.</p>
-      </div>
-      <div class="carousel-item teal darken-2 white-text" href="#one!">
-        <h2>Home section</h2>
-        <p class="white-text">This is the Home Section.</p>
-      </div>
-      <div class="carousel-item teal darken-1 white-text" href="#one!">
-        <h2>Home section</h2>
-        <p class="white-text">This is the Home Section.</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col s12">
-      <div class="card horizontal hoverable">
-        <div class="card-image">
-          <img src="https://lorempixel.com/100/190/nature/6">
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col s6">
-      <div class="card horizontal hoverable">
-        <div class="card-image">
-          <img src="https://lorempixel.com/100/190/nature/6">
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col s6">
-      <div class="card horizontal hoverable">
-        <div class="card-image">
-          <img src="https://lorempixel.com/100/190/nature/6">
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <!--<div id="div_main_grid" class="row">
+
+  </div>-->
+  <!--<div class="row">
+  <div class="col s12">
+  <div class="card horizontal hoverable">
+  <div class="card-image">
+  <img src="https://lorempixel.com/100/190/nature/6">
+</div>
+<div class="card-stacked">
+<div class="card-content">
+<p>I am a very simple card. I am good at containing small bits of information.</p>
+</div>
+<div class="card-action">
+<a href="#">This is a link</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="col s6">
+<div class="card horizontal hoverable">
+<div class="card-image">
+<img src="https://lorempixel.com/100/190/nature/6">
+</div>
+<div class="card-stacked">
+<div class="card-content">
+<p>I am a very simple card. I am good at containing small bits of information.</p>
+</div>
+<div class="card-action">
+<a href="#">This is a link</a>
+</div>
+</div>
+</div>
+</div>
+<div class="col s6">
+<div class="card horizontal hoverable">
+<div class="card-image">
+<img src="https://lorempixel.com/100/190/nature/6">
+</div>
+<div class="card-stacked">
+<div class="card-content">
+<p>I am a very simple card. I am good at containing small bits of information.</p>
+</div>
+<div class="card-action">
+<a href="#">This is a link</a>
+</div>
+</div>
+</div>
+</div>
+</div>-->
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
