--- a/movieList.html
+++ b/movieList.html
@@ -30,6 +30,24 @@
       </ul>
     </div>
   </nav>
+  <div class="parallax-container">
+    <div class="parallax"><img src="/media/batman.jpg"></div>
+  </div>
+  <div class="section teal darken-1">
+    <div class="row container">
+      <h2 class="header white-text">The Dark Knight</h2>
+      <p class="grey-text text-darken-3 lighten-3"></p>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="/media/pacificrim.jpg"></div>
+  </div>
+  <div class="section teal darken-1">
+    <div class="row container">
+      <h2 class="header white-text">Pacific Rim</h2>
+      <p class="grey-text text-darken-3 lighten-3"></p>
+    </div>
+  </div>
   <div id="div_main_grid" class="grid">
     <div id="div_main_info" class="row" style="height: 100%">
     </div>
@@ -40,5 +58,5 @@
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
-<script src="js/movie-list.js" type="text/javascript"></script>
+<script src="js/movie_list.js" type="text/javascript"></script>
 </html>
