--- a/account.html
+++ b/account.html
@@ -11,9 +11,16 @@
   <title>EasyCartelera</title>
   <link rel="shortcut icon" href="media/movie.png">
   <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache">
+  <meta http-equiv="Pragma" CONTENT="no-cache"> -->
 </head>
 <body>
+  <ul id="account-dropdown" class="dropdown-content">
+    <li><a href="#">Profile</a></li>
+    <li><a href="#!" onclick="signOut()">Sign out</a></li>
+  </ul>
   <nav>
     <div class="nav-wrapper teal darken-3">
       <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
@@ -21,55 +28,20 @@
         <li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
         <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
         <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+        <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
         <li id="li_account"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
       </ul>
     </div>
   </nav>
   <div id="div_main_grid" class="grid">
     <div id="div_main_info" class="row" style="height: 100%">
-      <div class="col s12">
-        <div class="card white">
-          <div class="card-content" style="height:100%">
-            <span class="card-title">Sign In</span>
-          </div>
-          <div class="card-action">
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="user" type="text" class="validate">
-                <label for="user">Username</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="password" type="password" class="validate">
-                <label for="password">Password</label>
-              </div>
-            </div>
-            <div class="row">
-              <!--<div class="col s4">-->
-              <a class="waves-effect waves-light btn black-text grey lighten-4" onclick="signIn()">Sign in</a>
-              <!--</div>-->
-            </div>
-            <div class="divider" style="margin-bottom: 3%;"></div>
-            <div class="row">
-              <div class="chip hoverable" onclick="mygoogle()">
-                <img src="http://ssl.gstatic.com/images/branding/google_plus/2x/gplus_icon_flush_60dp.png
-                " alt="Contact Person">
-                Google +
-              </div>
-              <div class="chip hoverable" href="https://github.com/login/oauth/authorize?scope=user:email&client_id=<%= client_id %>">
-                <img src="https://assets-cdn.github.com/favicon.ico" alt="Contact Person">
-                GitHub
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </body>
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
-  <script src="js/firebase.js" type="text/javascript"></script>
-  </html>
+  </div>
+</body>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script src="js/firebase.js" type="text/javascript"></script>
+<script src="js/account.js" type="text/javascript"></script>
+</html>
