--- a/index.html
+++ b/index.html
@@ -14,40 +14,50 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+	<ul id="account-dropdown" class="dropdown-content">
+		<li><a href="account.html">Profile</a></li>
+		<li><a href="#!" onclick="signOut()">Sign out</a></li>
+	</ul>
 	<nav>
 		<div class="nav-wrapper teal darken-3">
 			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-				<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-				<li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-				<li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+				<li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+				<li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+				<li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+				<li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
+				<li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
 			</ul>
 		</div>
 	</nav>
 	<div id="div_main_grid" class="grid">
 		<div id="div_main_info" class="row" style="height: 100%">
-			<div id="div_card_box" class="col s3">
+			<div id="div_card_box" class="col s0 m4">
 				<div class="row">
-					<div id="div_card_column" class="col s12">
-						<div class="card hoverable">
-							<div class="card-image">
-								<img src="media/logoDinosaurio.jpg">
-								<span class="card-title">Cines Dinosaurio</span>
+					<div id="div_card_column" class="col s0 m12">
+						<!--<div id="preloader" class="row">
+							<div class="col s6 offset-s6">
+								<br>
+								<br>
+								<div class="preloader-wrapper small active">
+									<div class="spinner-layer spinner-green-only">
+										<div class="circle-clipper left">
+											<div class="circle"></div>
+										</div><div class="gap-patch">
+											<div class="circle"></div>
+										</div><div class="circle-clipper right">
+											<div class="circle"></div>
+										</div>
+									</div>
+								</div>
 							</div>
-							<div class="card-content">
-								<p> Ubicado en Rodriguez del Busto, ofrece muy buenas comodidades y una alta resolucion de imagen por un precio accesible.
-								</p>
-							</div>
-							<div class="card-action">
-								<a href="www.cinesdinomall.com.ar">Pagina Web</a>
-							</div>
-						</div>
+						</div>-->
+						<!-- Cards will dinamically appear here -->
 					</div>
 				</div>
-				<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>
 			</div>
-			<div id="div_main_map" class="col s9">
+			<!--<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>-->
+			<div id="div_main_map" class="col s12 m8">
 				<div id="map"></div>
 			</div>
 		</div>
@@ -57,7 +67,9 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="js/map.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIUQATrNl5GqOq-CB2oQoquSPrXC0tElA&callback=myMap" async defer></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
+<script src="js/cards.js" type="text/javascript"></script>
+<script src="js/index.js" type="text/javascript"></script>
 </html>
