--- a/html-elements/register.html
+++ b/html-elements/register.html
@@ -1,7 +1,7 @@
 <div class="col s12 m8 offset-m2">
   <div class="card white">
     <div class="card-content" style="height:100%">
-      <span class="card-title">Register</span>
+      <span class="card-title"><a onclick="$(document).load(""html-elements/sign-in-form.html"");"><i class="material-icons">arrow_back</i></a>Register</span>
     </div>
     <div class="card-action">
       <div class="row">
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="input-field col s5">
           <input id="input_repeat_password" type="password" class="validate">
-          <label for="input_repeat_password">Repear password</label>
+          <label for="input_repeat_password">Repeat password</label>
         </div>
       </div>
       <div class="row">
