--- a/html-elements/nav-bar.html
+++ b/html-elements/nav-bar.html
@@ -4,6 +4,10 @@
     <li><a href="account.html">Profile</a></li>
     <li><a href="#!" onclick="signOut()">Sign out</a></li>
   </ul>
+  <ul id="side-account-dropdown" class="dropdown-content">
+    <li><a href="account.html">Profile</a></li>
+    <li><a href="#!" onclick="signOut()">Sign out</a></li>
+  </ul>
   <div class="navbar-fixed">
     <nav>
       <div id="nav-bar" class="nav-wrapper">
@@ -30,6 +34,10 @@
         <a><span id="side-nav-user-email" class="white-text email">Log in for more features</span></a>
       </div>
     </li>
+    <li id="li_side_movie_list"><a href="../template/movieList.html"><i class="material-icons icon-white left" style="font-size: 20px">format_list_bulleted</i>Movie list</a></li>
+    <li id="li_side_map"><a href="../template/index.html"><i class="material-icons icon-white left" style="font-size: 20px">map</i>Map</a></li>
+    <li id="li_side_home"><a href="../template/home.html"><i class="material-icons icon-white left" style="font-size: 20px">home</i>Home</a></li>
+    <li><a class="dropdown-trigger" href="#" data-target="side-account-dropdown"><i class="material-icons icon-white left" style="font-size: 20px">account_circle</i>Account<i class="material-icons right">arrow_drop_down</i></a></li>
   </ul>
 </div>
 <!--########## ()()()()()() ##########-->
